force-app/main/default/objects/Comment__c/Comment__c.object-meta.xml
<CustomObject>
    <label>Comment</label>
    <pluralLabel>Comments</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Comment Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 