force-app/main/default/objects/Comment__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Comments Authored</relationshipLabel>
    <relationshipName>CommentsAuthored</relationshipName>
    <type>Lookup</type>
</CustomField> 