force-app/main/default/objects/Comment__c/fields/IsInternal__c.field-meta.xml
<CustomField>
    <fullName>IsInternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField> 