force-app/main/default/objects/Comment__c/fields/ParentComment__c.field-meta.xml
<CustomField>
    <fullName>ParentComment__c</fullName>
    <label>Parent Comment</label>
    <referenceTo>Comment__c</referenceTo>
    <relationshipLabel>Child Comments</relationshipLabel>
    <relationshipName>ChildComments</relationshipName>
    <type>Lookup</type>
</CustomField> 